# paracosm

./: .gitignore  CMakeLists.txt  README.md  ThirdParty.cmake  main.cpp  prototyping.ipynb  test_script.py
src/: CMakeLists.txt  demo.cpp  engine.cpp  engine.h
src/rendering/: vulkan-renderer.cpp  vulkan-renderer.h
